# graph3d

./: .gitignore
Models/: square.mtl
src/Application/: utils.cpp
src/Assignments/CameraMovement/: app.cpp  app.h
src/Assignments/Colors/: app.cpp
src/Assignments/Colors/shaders/: base_vs.glsl
src/Assignments/House/: app.cpp
src/Assignments/Indices/: README.md  app.cpp
src/Assignments/Indices/shaders/: base_fs.glsl
src/Assignments/MeshesMaterial/: app.cpp
src/Assignments/MeshesMaterials/: CMakeLists.txt  app.cpp
src/Assignments/MeshesMaterials/shaders/: base_fs.glsl  base_vs.glsl
src/Assignments/PVM/: app.cpp
src/Assignments/PVM/shaders/: base_vs.glsl
src/Assignments/Phong/: CMakeLists.txt  app.cpp  app.h  camera.h  rotation.h
src/Assignments/Pyramid/: app.cpp
src/Assignments/Resizing/: app.cpp
src/Assignments/Texture/: CMakeLists.txt
src/Assignments/Textures/: CMakeLists.txt  app.cpp  camera_controler.h
src/Assignments/Uniforms/: app.cpp
src/Assignments/Uniforms/shaders/: base_fs.glsl
src/Assignments/Zoom/: app.cpp  app.h  camera.h
src/Engine/: CMakeLists.txt  ColorMaterial.cpp  ColorMaterial.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PhongMaterial.cpp  PhongMaterial.h  mesh_loader.cpp  mesh_loader.h  texture.cpp  texture.h
src/Engine/shaders/: phong_fs.glsl  phong_vs.glsl
src/XeEngine/: Node.cpp  mesh_loader.cpp
